manifests/tls/route_tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app-route-https
  namespace: default
spec:
  hostnames:
  - "echo.79.76.98.111.nip.io"
  parentRefs:
  - name: public-gateway
    namespace: default
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-app
      port: 80
